--- a/app/src/index.css
+++ b/app/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.animal_img {
+  max-width: 70px;
+}
