--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,3 +15,15 @@ code {
 .animal_img {
   max-width: 70px;
 }
+
+.dropzone {
+  margin: 20px;
+  max-width: 500px;
+  height: 50px;
+  border: 2px dashed black;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.dropzone:hover{
+  opacity: 0.7;
+}
