--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-bottom: 60px;
-  background-color: #eee;
+  background-color: cornsilk;
 }
 
 code {
@@ -15,16 +20,13 @@ code {
 }
 
 .animal_img {
-  max-width: 70px;
-  max-height: 70px;
+  max-width: 60px;
+  max-height: 60px;
 }
 
 .dropzone {
   margin: 20px;
-  max-width: 500px;
-  height: 50px;
-  border: 2px dashed black;
-  background-color: rgba(0,0,0,0.3);
+  display: inline-block;
 }
 
 .dropzone:hover{
